--- a/src/Manassa/Windows/Viewers/Proteins/ProteinGrid.xaml
+++ b/src/Manassa/Windows/Viewers/Proteins/ProteinGrid.xaml
@@ -46,9 +46,10 @@
 
             <DataGrid.Columns >
                 <!--Dataset Information-->
-                <DataGridTextColumn         Header="Protein ID"  CanUserSort="True"      Binding="{Binding ProteinID}"  IsReadOnly="True"/>
-                <DataGridTextColumn         Header="Ref ID" CanUserSort="True"      Binding="{Binding RefID}" IsReadOnly="True"/>
-                <DataGridTextColumn         Header="Sequence"               CanUserSort="True"      Binding="{Binding Sequence}"       IsReadOnly="True"/>                
+                <DataGridTextColumn         Header="Protein ID"  CanUserSort="True"      Binding="{Binding ProteinID}"      IsReadOnly="True"/>
+                <DataGridTextColumn         Header="Ref ID"      CanUserSort="True"      Binding="{Binding RefID}"          IsReadOnly="True"/>
+                <DataGridTextColumn         Header="Description" CanUserSort="True"      Binding="{Binding Description}"    IsReadOnly="True"/>
+                <DataGridTextColumn         Header="Sequence"    CanUserSort="True"      Binding="{Binding Sequence}"       IsReadOnly="True"/>                
             </DataGrid.Columns>
         </DataGrid>
     </Grid>
